--- a/index.html
+++ b/index.html
@@ -30,8 +30,20 @@
     <body>
        
       <hr>
-      <div class=keyimage_box> 
+      <div class="keyimage_box"> 
 	      <img class="keyimage" src="images/keyimageX.jpg" alt="Working with Code" width=1170px >
       </div>
+
+      <div class="pics_box">
+      	<div>
+	      	<img class="p1" src="images/01.jpg" alt="Portfolio Item #1">
+      	</div>
+      	<div>
+	      	<img class="p2" src="images/02.jpg" alt="Portfolio Item #2">
+      	</div>
+      	<div>	
+	      	<img class="p3" src="images/03.jpg" alt="Portfolio Item #3">
+      	</div>
+	  </div>
         
     </body> 
